<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/bGetPicture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/get_your_picture" />

    <ImageView
        android:id="@+id/ivComplement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="58dp"
        android:contentDescription="@string/shows_the_complement_color"
        android:src="@android:drawable/alert_dark_frame" />

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/ivComplement"
        android:layout_marginLeft="67dp"
        android:contentDescription="@string/display_s_the_users_image_selection"
        android:src="@android:drawable/alert_dark_frame" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ivPicture"
        android:layout_below="@+id/ivPicture"
        android:text="@string/original"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="42dp"
        android:text="@string/complement"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>